--- a/src/Components/Loader/Loader.css
+++ b/src/Components/Loader/Loader.css
@@ -1,11 +1,14 @@
 .venus {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     align-items: center;
-    position: absolute;
     border-radius: 50%;
     background-color: rgba(255, 186, 58, 0.541);
     display: flex;
-    width: 3px;
-    height: 3px;
+    width: 100px;
+    height: 100px;
     box-shadow: 1px 0px 40px 10px rgb(255, 209, 110);
     animation: blink 2s infinite;
 }
@@ -18,10 +21,8 @@
   }
 
 p {
-    text-align: center;
     color: rgb(255, 254, 184);
     font-weight: bold;
-    margin-left: 27%;
 }
 
 @keyframes blink {
