--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -7,5 +7,6 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgb(255, 150, 150);
+    background-color: rgba(255, 150, 150, 0.493);
+    z-index: 1;
 }
