--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -8,4 +8,13 @@
     background-color: black;
     overflow: hidden;
     display: flex;
-  }
+}
+
+.sobre {
+    color: rgb(255, 254, 184);
+    font-weight: bold;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
