--- a/src/Components/Loader/Loader.css
+++ b/src/Components/Loader/Loader.css
@@ -16,8 +16,9 @@
 .venus:nth-child(1) {
     width: 200px;
     height: 200px;
-    top: calc(10vh + 10px);
-    left: calc(15vw + 20px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
 p {
