--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,12 +1,22 @@
 .header {
-    color: rgb(255, 254, 184);
-    font-weight: bold;
     display: flex;
     justify-content: space-around;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    height: 5%;
     background-color: rgba(255, 150, 150, 0.493);
     z-index: 1;
+}
+
+button {
+    background-color: rgba(255, 150, 150, 0);
+    color: rgb(255, 254, 184);
+    font-weight: bold;
+    transition: 2s;
+}
+
+button:hover {
+    font-size: large;
 }
