--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -9,10 +9,61 @@
 }
 
 .sobre {
+    width: 60%;
     color: rgb(255, 254, 184);
     font-weight: bold;
     position: fixed;
-    top: 50%;
+    top: 40%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -40%);
+}
+
+h1 {
+    color: rgba(255, 150, 150, 0.493);
+    position: relative;
+    text-align: center;
+}
+
+p {
+    margin-top: 5%;
+}
+
+.icons {
+    margin-top: 10%;
+    display: flex;
+    justify-content: center;
+}
+
+@media (min-width: 1024px) {
+    .icons {
+      margin-top: 5%;
+    }
+}
+
+.icons a {
+    border-radius: 4px;
+    width: 20px;
+    height: 20px;
+}
+
+.icons a:nth-child(2) {
+    margin-left: 2%;
+}
+
+@media (max-width: 1024px) {
+    .icons a:nth-child(2) {
+        margin-left: 3%;
+    }
+}
+
+@media (max-width: 425px) {
+    .icons a:nth-child(2) {
+        margin-left: 6%;
+    }
+}
+
+@media (max-width: 280px) {
+    .sobre {
+        width: 90%;
+    }
 }
