--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -32,6 +32,13 @@ p {
     margin-top: 10%;
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 20px;
+    align-items: center;
+}
+
+.icons a:nth-child(2) {
+    margin-left: 2%;
 }
 
 @media (min-width: 1024px) {
@@ -40,21 +47,13 @@ p {
     }
 }
 
-.icons a {
-    border-radius: 4px;
-    width: 20px;
-    height: 20px;
-}
-
-.icons a:nth-child(2) {
-    margin-left: 10%;
-}
-
-@media (max-width: 1024px) {
-    .icon a:nth-child(2) {
+@media (max-width: 425px) {
+    .icons a:nth-child(2) {
         margin-left: 3%;
     }
 }
+
+
 
 @media (max-width: 280px) {
     .sobre {
