--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -35,11 +35,18 @@ p {
     width: 100%;
     height: 20px;
     align-items: center;
+    animation: icones 2s infinite;
 }
 
 .icons a:nth-child(2) {
     margin-left: 2%;
 }
+
+@keyframes icones {
+    50% {
+      opacity: 0.5;
+    }
+  }
 
 @media (min-width: 1024px) {
     .icons {
